[package]
name = "adxl345_driver"
version = "0.0.6"
authors = ["Michael Cummings <dragonrun1@gmail.com>"]
description = "Driver for Analog Device ADXL345/ADXL346 3-Axis Digital Accelerometer"
edition = "2018"
keywords = ["adxl345", "embedded", "pi", "raspberry", "driver"]
categories = ["embedded", "hardware-support", "os"]
license = "MIT"
homepage = "https://github.com/Dragonrun1/adxl345_driver"
readme = "README.md"
repository = "https://github.com/Dragonrun1/adxl345_driver"

[dependencies]
bitflags = "2"
c2rust-bitfields = { version = "0.18", features = ["no_std"], default_features = false }
embedded-hal = "=1.0.0-alpha.10"

[dev-dependencies]
anyhow = "1.0.33"
ctrlc = { version = "3.1.7", features = ["termination"] }

[features]
default = []
no_std = []
